# Berry_Settie

./: dune-project
_build/: .db  .digest-db  log
_build/default/: Berry_Settie.dune-package  Berry_Settie.install
_build/default/lib/: lib.cma  lib.cmxa  lib.cmxs  lib.ml
_build/default/lib/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt
_build/default/lib/.lib.objs/native/: lib.cmx
_build/default/lib/.merlin-conf/: lib-lib
_build/default/test/.Berry_Settie.eobjs/byte/: dune__exe__Berry_Settie.cmi  dune__exe__Berry_Settie.cmti
_build/default/test/.Berry_Settie.eobjs/native/: dune__exe__Berry_Settie.cmx
_build/default/test/.merlin-conf/: exe-Berry_Settie
_build/install/default/lib/Berry_Settie/: META  dune-package  opam
lib/: lib.ml
test/: dune
